[CORRECTION][DIAGNOSTIC] aligne au centre les icones des boutons de navigation

--- a/mon-aide-cyber-ui/src/assets/styles/_diagnostic.scss
+++ b/mon-aide-cyber-ui/src/assets/styles/_diagnostic.scss
@@ -83,9 +83,7 @@
 }
 
 .navigation-thematiqes li {
-  width: 100%;
-  height: 72px;
-  padding-left: 0.5rem;
+  height: 4.5rem;
 }
 
 .navigation-thematiqes button {
